fix alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -576,7 +576,7 @@ a.left2:hover {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, 120%);
+    transform: translate(-50%, 50%);
 }
 
 .parent-projects {
